fixed spacing on proj

--- a/portfolio/client/src/styles/contact.scss
+++ b/portfolio/client/src/styles/contact.scss
@@ -21,8 +21,8 @@
     height: 32vh;
     position: absolute;
     margin-top: 15px; 
-    animation: bounce 2s cubic-bezier(.755, .05, .855, .06) forwards,
-    roll 3s 2.05s ease forwards;
+    // animation: bounce 2s cubic-bezier(.755, .05, .855, .06) forwards,
+            //  roll 3s 2.05s ease forwards;
 }
 
 @keyframes bounce {
