--- a/portfolio/client/src/styles/work.scss
+++ b/portfolio/client/src/styles/work.scss
@@ -73,11 +73,12 @@
 
  //images
 .cont-cont .project-img img {
-	width: 28em;
-	height: 100%;
+	width: auto;
+	height: 20em;
 	border-radius: 6px;
 	box-shadow: 0px 1px 4px darkgrey;
 }
+
 
 // .cont-cont .first-project .project-img {
 
@@ -90,6 +91,7 @@
 	flex-direction: column;
 	display: flex;
 }
+
 
 .project-title {
 	margin-top: 1.5em;
@@ -107,6 +109,8 @@
 	justify-content: space-evenly;
 	margin-top: 3em;
 }
+
+
 .github-button {
 	border: 3px solid white;
 	color: white;
